2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: If upload of a file throws an exception,
	continue with the next file instead of aborting everything.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Use safe remote methods (safe as in will retry
	for a specified amount of time if connection fails).

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* BuildInfo.cs:
	* Builder.cs: Request multiple work from the server. If work
	failed for a hostlane, don't do any more work for that hostlane
	(since we don't know if we're supposed to work on it or not).

2009-06-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Don't spam the server 20 times a minute if there
	is nothing to do.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Put the upper limit in the right place.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Quick hack to do more than one iteration of
	builder duty per program invocation.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Need to set BUILD_HOST now that we don't source
	config.sh anymore.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add a using clause, seems like older gmcs doesn't
	work without it.

2009-05-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Remove dead code and add a suggested work around
	  for runtime bug# 499702.

2009-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CustomTypes.sql:
	* DBRevisionWorkView.cs: Include WorkHost in RevisionWorkView.

	* DBRevisionWorkView.generated.cs: Regenerated.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs:
	* DBHost.generated.cs: Add support for disabling hosts.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBMatchMode.cs:
	* DBDeleteCondition.cs:
	* DBLaneDeletionDirective.cs:
	* DBFileDeletionDirective.cs:
	* DBLaneDeletionDirectiveView.cs:
	* DBFileDeletionDirective.generated.cs: