@@ -42,6 +42,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="FileUtilities.cs" />
     <Compile Include="IDB.cs" />
+    <Compile Include="Lock.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MimeTypes.cs" />
     <Compile Include="Options.cs" />
