@@ -1,5 +1,13 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Lock.cs: Added customizable locking algorithm.
+
+	* Configuration.cs: Added configuration for LockingAlgorithm.
+
+	* MonkeyWrench.csproj: Updated.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Configuration.cs: Add support for retrying connections
 	to remote server.
 
