@@ -1,5 +1,9 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Builder.cs: Updated according to locking changes.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Builder.cs: If upload of a file throws an exception,
 	continue with the next file instead of aborting everything.
 
